Fix navigation bar in place on flowchart

--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -582,8 +582,21 @@ a.block-edit {
   margin-top: 0;
 }
 
+.TopNavigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 .scale {
-  margin: 15px;
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+}
+
+#content {
+  padding: 20rem 2rem 5rem;
 }
 
 </style>
