--- a/app/components/TopNavigation/TopNavigation.njk
+++ b/app/components/TopNavigation/TopNavigation.njk
@@ -1,4 +1,5 @@
 {% macro TopNavigation(route_url) %}
+{% if flags['top-navigation'] %}
 <div class="TopNavigation">
 <div class="{{ govukClassname('gv-o-wrapper') }}">
 <ul class="TopNavigation__links">
@@ -32,7 +33,12 @@
 
   {% endif %}
 </ul>
+{% if flowchart %}
+<div class="scale">
+<input name="scale" type="range" min="0.1" max="1" value="0.75" step="0.01">
+</div>
+{% endif %}
 </div>
 </div>
+{% endif %}
 {% endmacro %}
-{# data-link-type="feedback-banner" #}
