Add validation and error properties;
Add select or create block by reference flow;

Add depends rule/condition UI enhancement

--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -691,7 +691,7 @@ Wizard flow - Prototype
 <div class="steps-configure">
 <h4>Steps</h4>
 <ul>
-<li class="step-add"><a href="/admin/blocks/Route/new?steps={{stepId}}" target="add-step" class="edit-in-place">Add step</a></li>
+<li class="step-add"><a href="/admin/blocks/Route/new?propertyRef=steps&amp;blockRef={{stepId}}" target="add-step" class="edit-in-place">Add step</a></li>
 {% if hasSteps %}
 <li class="steps-hide">Hide steps</li>
 <li class="steps-toggle">Collapse steps</li>
