--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -536,6 +536,7 @@ a.block-edit {
   right: -10rem;
   top: 0;
   width: 5rem;
+  z-index: 20000000;
 }
 
 .depend-list::before {
@@ -582,6 +583,17 @@ span.no-depends {
   background: #000000;
   color: #ffffff;
 }
+
+.step-exit::before {
+    content: '';
+    width: 9rem;
+    height: 10rem;
+    background: #ffffff;
+    position: absolute;
+    left: 4.675rem;
+    top: 4rem;
+}
+
 .steps-configure {
   position: absolute;
   right: 0;
