--- a/app/css/utils/app-components.pcss
+++ b/app/css/utils/app-components.pcss
@@ -2,3 +2,4 @@
 @import 'CookieMessage/CookieMessage.pcss';
 @import 'FeedbackBanner/FeedbackBanner.pcss';
 @import 'Group/Group.pcss';
+@import 'PreviewSummary/PreviewSummary.pcss';
