Add form styling to all pages

--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -98,6 +98,16 @@ sup {
   margin: 0;
 }
 
+.gv-s-prose .button,
+.gv-s-prose .button a {
+  text-decoration: none;
+  color: var(--govuk-white);
+
+  &:hover {
+    color: var(--govuk-white);
+  }
+}
+
 .button.button-secondary {
   /* font-size: 1.5rem; */
   background: transparent;
