--- a/app/templates/form/form.html
+++ b/app/templates/form/form.html
@@ -1,7 +1,7 @@
 {% extends "templates/app/app.html" %}
 {% from 'components/ErrorSummary/ErrorSummary.njk' import ErrorSummary with context %}
 
-{% block stylesheet %}
+{% block Xstylesheet %}
 <link href="/public/stylesheets/govuk-form-styles.css" rel="stylesheet">
 {{ super() }}
 {% endblock %}
