--- a/app/templates/app-base/app-base.html
+++ b/app/templates/app-base/app-base.html
@@ -19,6 +19,7 @@
 {% block stylesheet %}
 {{ super() }}
 <link href="/public/stylesheets/app.css" media="screen" rel="stylesheet">
+<link href="/public/stylesheets/govuk-form-styles.css" rel="stylesheet">
 {% endblock %}
 
 {% block head %}
