Tweak margin on marooned notice blocks

--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -201,3 +201,11 @@ sup {
   top: 0;
   margin-top: 0;
 }
+
+ul + .gv-c-notice {
+  margin-top: 4rem;
+}
+
+.gv-c-notice:last-child {
+  margin-bottom: 4rem;
+}
