Remove date placeholder text;
Ensure gv-s-prose styling doesn't clobber links

--- a/app/components/Group/Group.pcss
+++ b/app/components/Group/Group.pcss
@@ -4,12 +4,17 @@
   & .button {
     /* font-size: 1.5rem; */
     background: transparent;
-    color: var(--govuk-blue);
+    color: var(--link-colour);
     border-bottom-color: var(--govuk-white);
     box-shadow: none;
     text-decoration: underline;
     padding-left: 0;
     padding-right: 0;
     margin-right: 5rem;
+
+    &:hover {
+      background: transparent;
+      color: var(--link-hover-colour);
+    }
   }
 }
