--- a/app/components/Date/Date.njk
+++ b/app/components/Date/Date.njk
@@ -10,9 +10,9 @@
   {% call Fieldset(name, visually_hidden=visually_hidden) %}
     {% set dateType = getBlockProp(name, 'date_type', 'day-month-year') %}
     <div class="form-date">
-      {% if 'day' in dateType %}{{ Input(name, suffix='day', type='number', label='Day', pattern='[0-9]*', min=0, max=31, placeholder='dd') }}{% endif %}
-      {% if 'month' in dateType %}{{ Input(name, suffix='month', type='number', label='Month', pattern='[0-9]*', min=0, max=12, placeholder='mm') }}{% endif %}
-      {% if 'year' in dateType %}{{ Input(name, suffix='year', type='number', label='Year', pattern='[0-9]*', placeholder='yyyy') }}{% endif %}
+      {% if 'day' in dateType %}{{ Input(name, suffix='day', type='number', label='Day', pattern='[0-9]*', min=0, max=31) }}{% endif %}
+      {% if 'month' in dateType %}{{ Input(name, suffix='month', type='number', label='Month', pattern='[0-9]*', min=0, max=12) }}{% endif %}
+      {% if 'year' in dateType %}{{ Input(name, suffix='year', type='number', label='Year', pattern='[0-9]*') }}{% endif %}
     </div>
     {# alt #}
     {# {% set day = getBlockProp(name, 'day', true) %}
