--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -111,13 +111,18 @@ sup {
 .button.button-secondary {
   /* font-size: 1.5rem; */
   background: transparent;
-  color: var(--govuk-blue);
+  color: var(--link-colour);
   border-bottom-color: var(--govuk-white);
   box-shadow: none;
   text-decoration: underline;
   padding-left: 0;
   padding-right: 0;
   margin-left: 6rem;
+
+  &:hover {
+    background: transparent;
+    color: var(--link-hover-colour);
+  }
 
   &:first-child {
     margin-left: 0;
