--- a/app/templates/flowchart/flowchart.html
+++ b/app/templates/flowchart/flowchart.html
@@ -802,7 +802,7 @@ hierarchy:<br>{{ stepRoute.hierarchy.join('<br>') | safe }}
 {{ route.flowchartOutput[stepId] | safe }}
 {% else %}
 {# update per-route id and vars #}
-{% set updateRouteFormatSink = updateRouteFormat(stepId) %}
+{% set updateRouteFormatSink = updateRouteFormat(step) %}
 
 <div class="route-header">{{ Block.PageHeader(stepId, start_page=stepRoute.start_page) }}</div>
 {{ Block.Body(stepId) }}
